[tool.poetry]
name = "finalproject-makarova"
version = "0.1.0"
description = "Currency wallet CLI application"
authors = ["Makarova Maria <rebecca.castle@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "valutatrade_hub" }
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "TID", "SIM"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
valutatrade = "main:main"